[metadata]
name = rydberggpt
version = 0.0.1

[options]
package_dir =
    =src
packages = 
    rydberggpt
install_requires = 
    torch>=2.0.0
    torchvision
    torch_geometric
    pennylane>=0.29
    numpy>=1.23
    tensorboard>=2.12
    matplotlib
    tqdm
    black
    pandas
    joblib
    seaborn
    imageio
    pytorch-lightning
    torch-tb-profiler
    pytest
    
[options.extras_require]
# Run tests and coverage
tests =
    pytest
    pytest-benchmark
    pytest-xdist
    pytest-cov
    pre-commit
    flake8